--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,4 @@ install: "pip install -r requirements.txt"
 # command to run tests
 # TODO: implement tests
 # script: pytest
+script: echo "I have no idea what I'm doing"
