Updated Makefile and documentation, moved manpages to subfolder

--- a/doc/manpages/Makefile
+++ b/doc/manpages/Makefile
@@ -3,7 +3,7 @@
 #source and output directory
 source := src
 output := man
-output_rst := ../source
+output_rst := ../source/man
 
 #all Markdown files in source directory are considered
 sources := $(wildcard $(source)/*.md)
