--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ install: "pip install -r requirements.txt"
 # script: pytest
 script: echo "I have no idea what I'm doing"
 # upload code coverage
-script: codeconv
+script: codecov
