--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "2.7"
   - "3.4"
 # command to install dependencies
-install: "pip install -r requirements.txt"
+install: "pip install -r requirements-tests.txt"
 # command to run tests
 # TODO: implement tests
 # script: pytest
