--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,4 @@ python:
 # command to install dependencies
 install: "pip install -r requirements-tests.txt"
 # command to run tests
-# TODO: implement tests
-# script: pytest
-script: echo "I have no idea what I'm doing"
+script: pytest
