--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ python:
 # command to install dependencies
 install: "pip install -r requirements-tests.txt"
 # command to run tests
-script: pytest
+script: pytest --cov=katprep/
 # upload code coverage
 script: codecov
