--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
   - "3.4"
 # command to install dependencies
 install: "pip install -r requirements-tests.txt"
-# command to run tests
-script: pytest --cov=katprep/
-# upload code coverage
-script: codecov
+
+script:
+  - pytest --cov=katprep
+  - codecov
