pin versions and fix linting

--- a/tests/Vagrant/playbook_katello.yml
+++ b/tests/Vagrant/playbook_katello.yml
@@ -3,4 +3,7 @@
   remote_user: root
   become: yes
   roles:
-    - { role: sean797.foreman_installer, foreman_installer_pkg: katello, foreman_installer_scenario: katello, foreman_installer_scenarios_answers: [foreman: {admin_password: "admin"}] }
+    - role: sean797.foreman_installer
+      foreman_installer_pkg: katello
+      foreman_installer_scenario: katello
+      foreman_installer_scenarios_answers: [foreman: {admin_password: "admin"}]
