--- a/tests/Vagrant/playbook_zabbix.yml
+++ b/tests/Vagrant/playbook_zabbix.yml
@@ -3,7 +3,14 @@
   remote_user: root
   become: yes
   roles:
-    - { role: geerlingguy.apache }
-    - { role: geerlingguy.mysql }
-    - { role: dj-wasabi.zabbix-server, zabbix_server_database: mysql, zabbix_server_database_long: mysql, zabbix_server_dbport: 3306 }
-    - { role: dj-wasabi.zabbix-web, zabbix_url: "localhost", zabbix_server_database: mysql, zabbix_server_database_long: mysql, zabbix_server_dbport: 3306}
+    - role: geerlingguy.apache
+    - role: geerlingguy.mysql
+    - role: dj-wasabi.zabbix-server
+      zabbix_server_database: mysql
+      zabbix_server_database_long: mysql
+      zabbix_server_dbport: 3306
+    - role: dj-wasabi.zabbix-web
+      zabbix_url: "localhost"
+      zabbix_server_database: mysql
+      zabbix_server_database_long: mysql
+      zabbix_server_dbport: 3306
