--- a/tests/Vagrant/playbook_katello.yml
+++ b/tests/Vagrant/playbook_katello.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: katello
   remote_user: root
-  become: yes
+  become: true
   roles:
     - role: sean797.foreman_installer
       foreman_installer_pkg: katello
