--- a/tests/Vagrant/playbook_zabbix.yml
+++ b/tests/Vagrant/playbook_zabbix.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: zabbix
   remote_user: root
-  become: yes
+  become: true
   roles:
     - role: geerlingguy.apache
     - role: geerlingguy.mysql
