--- a/tests/Vagrant/Vagrantfile
+++ b/tests/Vagrant/Vagrantfile
@@ -73,6 +73,7 @@ Vagrant.configure("2") do |config|
       yum -y install ansible
     SHELL
     kvm.vm.provision "ansible_local" do |ansible|
+      ansible.galaxy_role_file = "requirements_kvm.yml"
       ansible.playbook = "playbook_kvm.yml"
     end
   end
