--- a/tests/Vagrant/Vagrantfile
+++ b/tests/Vagrant/Vagrantfile
@@ -103,7 +103,8 @@ Vagrant.configure("2") do |config|
     katello.vm.network "private_network", ip: "192.168.23.60"
       # set memory
     katello.vm.provider "virtualbox" do |vb|
-      vb.memory = "6144"
+      vb.cpus = "2"
+      vb.memory = "8192"
     end
 
     # install Ansible and configure system
@@ -130,6 +131,7 @@ Vagrant.configure("2") do |config|
     uyuni.vm.network "private_network", ip: "192.168.23.70"
     # set memory
     uyuni.vm.provider "virtualbox" do |vb|
+      vb.cpus = "2"
       vb.memory = "4096"
     end
     # install Ansible and configure system
