--- a/tests/Vagrant/Vagrantfile
+++ b/tests/Vagrant/Vagrantfile
@@ -49,7 +49,17 @@ Vagrant.configure("2") do |config|
     xen.vm.box = "centos/7"
     # add private network
     xen.vm.network "private_network", ip: "192.168.23.30"
-
+    # set CPU and memory
+    xen.vm.provider "virtualbox" do |vb|
+      vb.cpus = "2"
+      vb.memory = "4096"
+      vb.customize ["modifyvm", :id, "--nested-hw-virt", "on"]
+    end
+    xen.vm.provider :libvirt do |libvirt|
+      libvirt.cpus = "2"
+      libvirt.memory = "4096"
+      libvirt.nested = true
+    end
     # install Ansible and configure system
     xen.vm.provision "shell", inline: <<-SHELL
       yum -y install rpm-python epel-release python-xml
@@ -61,12 +71,22 @@ Vagrant.configure("2") do |config|
   end
 
   # KVM host running a VM
-  config.vm.define "kvm" do |kvm|
+  config.vm.define "kvm", autostart: false do |kvm|
     kvm.vm.hostname = "kvm.example.com"
     kvm.vm.box = "centos/7"
     # add private network
     kvm.vm.network "private_network", ip: "192.168.23.40"
-
+    # set CPU and memory
+    kvm.vm.provider "virtualbox" do |vb|
+      vb.cpus = "2"
+      vb.memory = "4096"
+      vb.customize ["modifyvm", :id, "--nested-hw-virt", "on"]
+    end
+    kvm.vm.provider :libvirt do |libvirt|
+      libvirt.cpus = "2"
+      libvirt.memory = "4096"
+      libvirt.nested = true
+    end
     # install Ansible and configure system
     kvm.vm.provision "shell", inline: <<-SHELL
       yum -y install rpm-python epel-release python-xml
@@ -101,10 +121,14 @@ Vagrant.configure("2") do |config|
     katello.vm.network "forwarded_port", guest: 443, host: 8446
     # add private network
     katello.vm.network "private_network", ip: "192.168.23.60"
-      # set memory
+    # set CPU and memory
     katello.vm.provider "virtualbox" do |vb|
       vb.cpus = "2"
       vb.memory = "8192"
+    end
+    katello.vm.provider :libvirt do |libvirt|
+      libvirt.cpus = "2"
+      libvirt.memory = "8192"
     end
 
     # install Ansible and configure system
@@ -129,10 +153,14 @@ Vagrant.configure("2") do |config|
     uyuni.vm.network "forwarded_port", guest: 443, host: 8447
     # add private network
     uyuni.vm.network "private_network", ip: "192.168.23.70"
-    # set memory
+    # set CPU and memory
     uyuni.vm.provider "virtualbox" do |vb|
       vb.cpus = "2"
       vb.memory = "4096"
+    end
+    uyuni.vm.provider :libvirt do |libvirt|
+      libvirt.cpus = "2"
+      libvirt.memory = "4096"
     end
     # install Ansible and configure system
     uyuni.vm.provision "shell", inline: <<-SHELL
