--- a/tests/Vagrant/Vagrantfile
+++ b/tests/Vagrant/Vagrantfile
@@ -58,6 +58,7 @@ Vagrant.configure("2") do |config|
     xen.vm.provider :libvirt do |libvirt|
       libvirt.cpus = "2"
       libvirt.memory = "4096"
+      libvirt.cpu_model = "host-model"
       libvirt.nested = true
     end
     # install Ansible and configure system
@@ -85,6 +86,7 @@ Vagrant.configure("2") do |config|
     kvm.vm.provider :libvirt do |libvirt|
       libvirt.cpus = "2"
       libvirt.memory = "4096"
+      libvirt.cpu_model = "host-model"
       libvirt.nested = true
     end
     # install Ansible and configure system
