add code for nested Vagrant

--- a/tests/Vagrant/Vagrantfile
+++ b/tests/Vagrant/Vagrantfile
@@ -87,6 +87,7 @@ Vagrant.configure("2") do |config|
       libvirt.cpus = "2"
       libvirt.memory = "4096"
       libvirt.cpu_model = "host-model"
+      libvirt.cpu_feature :name => 'vmx', :policy => 'require'
       libvirt.nested = true
     end
     # install Ansible and configure system
@@ -147,7 +148,7 @@ Vagrant.configure("2") do |config|
   # Uyuni host
   config.vm.define "uyuni" do |uyuni|
     uyuni.vm.hostname = "uyuni.example.com"
-    uyuni.vm.box = "generic/opensuse15"
+    uyuni.vm.box = "roboxes/opensuse15"
     # copy files
     config.vm.synced_folder ".", "/vagrant", type: "rsync"
     # forward some ports
@@ -163,6 +164,7 @@ Vagrant.configure("2") do |config|
     uyuni.vm.provider :libvirt do |libvirt|
       libvirt.cpus = "2"
       libvirt.memory = "4096"
+      libvirt.disk_bus = "scsi" # needed to boot (see also https://github.com/lavabit/robox/issues/152#issue-632631234)
     end
     # install Ansible and configure system
     uyuni.vm.provision "shell", inline: <<-SHELL
