--- a/tests/Vagrant/Vagrantfile
+++ b/tests/Vagrant/Vagrantfile
@@ -4,6 +4,7 @@ Vagrant.configure("2") do |config|
   config.vm.define "monitoring" do |monitoring|
     monitoring.vm.hostname = "monitoring.example.com"
     monitoring.vm.box = "centos/7"
+    monitoring.vm.box_version = "2004.01"
     # forward some ports
     monitoring.vm.network "forwarded_port", guest: 80, host: 8080
     monitoring.vm.network "forwarded_port", guest: 443, host: 8443
@@ -26,6 +27,7 @@ Vagrant.configure("2") do |config|
   config.vm.define "zabbix", autostart: false do |zabbix|
     zabbix.vm.hostname = "zabbix.example.com"
     zabbix.vm.box = "centos/7"
+    zabbix.vm.box_version = "2004.01"
     # forward some ports
     zabbix.vm.network "forwarded_port", guest: 80, host: 8081
     zabbix.vm.network "forwarded_port", guest: 443, host: 8444
@@ -47,6 +49,7 @@ Vagrant.configure("2") do |config|
   config.vm.define "kvm", autostart: false do |kvm|
     kvm.vm.hostname = "kvm.example.com"
     kvm.vm.box = "centos/7"
+    kvm.vm.box_version = "2004.01"
     # add private network
     kvm.vm.network "private_network", ip: "192.168.23.40"
     # set CPU and memory
@@ -91,6 +94,7 @@ Vagrant.configure("2") do |config|
   config.vm.define "katello" do |katello|
     katello.vm.hostname = "katello.example.com"
     katello.vm.box = "centos/7"
+    katello.vm.box_version = "2004.01"
     # forward some ports
     katello.vm.network "forwarded_port", guest: 80, host: 8083
     katello.vm.network "forwarded_port", guest: 443, host: 8446
@@ -120,7 +124,8 @@ Vagrant.configure("2") do |config|
   # Uyuni host
   config.vm.define "uyuni" do |uyuni|
     uyuni.vm.hostname = "uyuni.example.com"
-    uyuni.vm.box = "roboxes/opensuse15"
+    uyuni.vm.box = "generic/opensuse15"
+    uyuni.vm.box_version = "3.1.6"
     # copy files
     config.vm.synced_folder ".", "/vagrant", type: "rsync"
     # forward some ports
