--- a/tests/Vagrant/playbook_uyuni.yml
+++ b/tests/Vagrant/playbook_uyuni.yml
@@ -26,12 +26,12 @@
     - name: Create activation key
       block:
         - name: Create key
-          command: spacecmd -u "{{ username }}" -p "{{ password }}" "activationkey_create -n ak-opensuse-15_2-default -d 'openSUSE Leap 15.2 default' -b opensuse_leap15_2-x86_64"
+          command: spacecmd "activationkey_create -n ak-opensuse-15_2-default -d 'openSUSE Leap 15.2 default' -b opensuse_leap15_2-x86_64"
         - name: Add child channels
-          command: spacecmd -u "{{ username }}" -p "{{ password }}" "activationkey_addchildchannels 1-ak-opensuse-15_2-default opensuse_leap15_2-x86_64-updates opensuse_leap15_2-uyuni-client-x86_64"
+          command: spacecmd "activationkey_addchildchannels 1-ak-opensuse-15_2-default opensuse_leap15_2-x86_64-updates opensuse_leap15_2-uyuni-client-x86_64"
       ignore_errors: true
     - name: Create filters
-      command: spacecmd -u "{{ username }}" -p "{{ password }}" "repo_setfilters '{{ item.channel }}' '{{ item.filter }}'"
+      command: spacecmd "repo_setfilters '{{ item.channel }}' '{{ item.filter }}'"
       loop:
         - channel: 'External - openSUSE Leap 15.2 x86_64'
           filter: '+cowsay,openscap-utils,apache2,apache2-utils,system-user-wwwrun,libapr1,screen,timezone,salt*,python3*'
@@ -54,3 +54,21 @@
             path: /srv/www/htdocs/pub/bootstrap/bootstrap.sh
             regexp: '^ACTIVATION_KEYS='
             line: 'ACTIVATION_KEYS=1-ak-opensuse-15_2-default'
+    - name: Create custominfo keys
+      command: spacecmd "custominfo_createkey '{{ item.name }}' '{{ item.description }}'"
+      loop:
+        - name: 'katprep_mon'
+          description: 'URL of the monitoring system'
+        - name: 'katprep_mon_type'
+          description: 'Monitoring system type: nagios/(icinga)'
+        - name: 'katprep_mon_name'
+          description: 'Object name within monitoring if not FQDN'
+        - name: 'katprep_virt'
+          description: 'Virtualization URL of the system'
+        - name: 'katprep_virt_type'
+          description: 'Virtualization host type: (libvirt)/pyvmomi'
+        - name: 'katprep_virt_name'
+          description: 'Object name within hypervisor if not FQDN'
+        - name: 'katprep_virt_snapshot'
+          description: 'Boolean whether system needs to be procted with a snapshot'
+      ignore_errors: true
