--- a/tests/Vagrant/playbook_uyuniclient.yml
+++ b/tests/Vagrant/playbook_uyuniclient.yml
@@ -7,6 +7,19 @@
       template:
         src: "hosts.j2"
         dest: /etc/hosts
+    - name: Configure NTP
+      block:
+        - name: Install chrony
+          zypper:
+            name: chrony
+        - name: Enable service
+          service:
+            name: chronyd
+            state: started
+            enabled: true
+        - name: Set timezone
+          timezone:
+            name: Europe/Berlin
   tasks:
     - name: Download script
       get_url:
