--- a/tests/Vagrant/Vagrantfile
+++ b/tests/Vagrant/Vagrantfile
@@ -3,8 +3,8 @@ Vagrant.configure("2") do |config|
   # OMD host
   config.vm.define "monitoring" do |monitoring|
     monitoring.vm.hostname = "monitoring.example.com"
-    monitoring.vm.box = "centos/7"
-    monitoring.vm.box_version = "2004.01"
+    monitoring.vm.box = "generic/centos7"
+    monitoring.vm.box_version = "3.2.8"
     # forward some ports
     monitoring.vm.network "forwarded_port", guest: 80, host: 8080
     monitoring.vm.network "forwarded_port", guest: 443, host: 8443
@@ -26,8 +26,8 @@ Vagrant.configure("2") do |config|
   # Zabbix host
   config.vm.define "zabbix", autostart: false do |zabbix|
     zabbix.vm.hostname = "zabbix.example.com"
-    zabbix.vm.box = "centos/7"
-    zabbix.vm.box_version = "2004.01"
+    zabbix.vm.box = "generic/centos7"
+    zabbix.vm.box_version = "3.2.8"
     # forward some ports
     zabbix.vm.network "forwarded_port", guest: 80, host: 8081
     zabbix.vm.network "forwarded_port", guest: 443, host: 8444
@@ -48,8 +48,8 @@ Vagrant.configure("2") do |config|
   # KVM host running a VM
   config.vm.define "kvm", autostart: false do |kvm|
     kvm.vm.hostname = "kvm.example.com"
-    kvm.vm.box = "centos/7"
-    kvm.vm.box_version = "2004.01"
+    kvm.vm.box = "generic/centos7"
+    kvm.vm.box_version = "3.2.8"
     # add private network
     kvm.vm.network "private_network", ip: "192.168.23.40"
     # set CPU and memory
@@ -93,8 +93,8 @@ Vagrant.configure("2") do |config|
   # Foreman/Katello host
   config.vm.define "katello" do |katello|
     katello.vm.hostname = "katello.example.com"
-    katello.vm.box = "centos/7"
-    katello.vm.box_version = "2004.01"
+    katello.vm.box = "generic/centos7"
+    katello.vm.box_version = "3.2.8"
     # forward some ports
     katello.vm.network "forwarded_port", guest: 80, host: 8083
     katello.vm.network "forwarded_port", guest: 443, host: 8446
@@ -125,7 +125,7 @@ Vagrant.configure("2") do |config|
   config.vm.define "uyuni" do |uyuni|
     uyuni.vm.hostname = "uyuni.example.com"
     uyuni.vm.box = "generic/opensuse15"
-    uyuni.vm.box_version = "3.1.6"
+    uyuni.vm.box_version = "3.2.4"
     # copy files
     config.vm.synced_folder ".", "/vagrant", type: "rsync"
     # forward some ports
@@ -159,7 +159,7 @@ Vagrant.configure("2") do |config|
   config.vm.define "uyuniclient" do |uyuniclient|
     uyuniclient.vm.hostname = "uyuniclient.example.com"
     uyuniclient.vm.box = "generic/opensuse15"
-    uyuniclient.vm.box_version = "3.1.6"
+    uyuniclient.vm.box_version = "3.2.4"
     # copy files
     config.vm.synced_folder ".", "/vagrant", type: "rsync"
     # add private network
