--- a/tests/Vagrant/Vagrantfile
+++ b/tests/Vagrant/Vagrantfile
@@ -15,7 +15,6 @@ Vagrant.configure("2") do |config|
     # install Ansible and configure system
     monitoring.vm.provision "shell", inline: <<-SHELL
       yum -y install rpm-python epel-release python-xml
-      yum -y install ansible
     SHELL
     monitoring.vm.provision "ansible_local" do |ansible|
       ansible.galaxy_role_file = "requirements_monitoring.yml"
@@ -37,7 +36,6 @@ Vagrant.configure("2") do |config|
     # install Ansible and configure system
     zabbix.vm.provision "shell", inline: <<-SHELL
       yum -y install rpm-python epel-release python-xml
-      yum -y install ansible
     SHELL
     zabbix.vm.provision "ansible_local" do |ansible|
       ansible.galaxy_role_file = "requirements_zabbix.yml"
@@ -68,7 +66,6 @@ Vagrant.configure("2") do |config|
     # install Ansible and configure system
     kvm.vm.provision "shell", inline: <<-SHELL
       yum -y install rpm-python epel-release python-xml
-      yum -y install ansible
     SHELL
     kvm.vm.provision "ansible_local" do |ansible|
       ansible.galaxy_role_file = "requirements_kvm.yml"
@@ -113,7 +110,6 @@ Vagrant.configure("2") do |config|
     # install Ansible and configure system
     katello.vm.provision "shell", inline: <<-SHELL
       yum -y install rpm-python epel-release python-xml
-      yum -y install ansible
     SHELL
     katello.vm.provision "ansible_local" do |ansible|
       ansible.galaxy_role_file = "requirements_katello.yml"
@@ -145,7 +141,7 @@ Vagrant.configure("2") do |config|
     end
     # install Ansible and configure system
     uyuni.vm.provision "shell", inline: <<-SHELL
-      zypper --non-interactive install python2-rpm ansible python-xml
+      zypper --non-interactive install python2-rpm python-xml
     SHELL
     uyuni.vm.provision "ansible_local" do |ansible|
       ansible.galaxy_role_file = "requirements_uyuni.yml"
